# CGProject

3DParticles/: CMakeLists.txt  Lamp.h  Particle.h  SpotLight.h  filesystem.h  instancing_asteroids_instanced.cpp  mesh.h  model.h  shader.h
3DParticles/Shaders/: instanced_asteroids.frag  instanced_asteroids.vs  shader.frag  shader.vs
ColataLavica/: Altitude.h  CMakeLists.txt  Camera.h  Matrix.h  Temperature.h  Texture.h  main.cpp
ColataLavica/shaders/: surface.frag  surface.vs
Floor/: CMakeLists.txt  Model.h  ObjectWithPosition.h  PointLight.h  Texture.h  model_rendered.cpp
Floor/shaders/: shader.frag
